--- a/src/webapp/WEB-INF/pages/index.html
+++ b/src/webapp/WEB-INF/pages/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<html lang="en">
+<html lang="ут">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Title</title>
 </head>
 <body>
 <div>
@@ -11,5 +11,8 @@
         <h1 th:text="${msg}"></h1>
     </th:block>
 </div>
+<a href="/cars">Click here</a>
+to go to the "/cars" page
+<div>привет</div>
 </body>
 </html>
