--- a/src/webapp/WEB-INF/pages/cars.html
+++ b/src/webapp/WEB-INF/pages/cars.html
@@ -13,7 +13,7 @@
         <th>Двигатель</th>
         <th>Серия</th>
     </tr>
-    <tr th:each="car: ${car}">
+    <tr th:each="car: ${cars}">
         <td th:text="${car.model}">...</td>
         <td th:text="${car.engine}">...</td>
         <td th:text="${car.series}">...</td>
